--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -147,16 +147,16 @@
           "spawn": "package:js"
         },
         {
-          "spawn": "package:dotnet"
+          "spawn": "package:java"
         }
       ]
     },
-    "package:dotnet": {
-      "name": "package:dotnet",
-      "description": "Create dotnet language bindings",
+    "package:java": {
+      "name": "package:java",
+      "description": "Create java language bindings",
       "steps": [
         {
-          "exec": "jsii-pacmak -v --target dotnet"
+          "exec": "jsii-pacmak -v --target java"
         }
       ]
     },
