--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "eslint": "npx projen eslint",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
-    "package:dotnet": "npx projen package:dotnet",
+    "package:java": "npx projen package:java",
     "package:js": "npx projen package:js",
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
@@ -117,9 +117,12 @@
   "jsii": {
     "outdir": "dist",
     "targets": {
-      "dotnet": {
-        "namespace": "adriangabardo.projen.poc",
-        "packageId": "projen.poc"
+      "java": {
+        "package": "com.adriangabardo.projen",
+        "maven": {
+          "groupId": "adriangabardo",
+          "artifactId": "com.adriangabardo.projen"
+        }
       }
     },
     "tsc": {
